--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -86,6 +86,10 @@ nav a{
 }
 
 /* main section style */
+main{
+    max-width: 1140;
+    margin: 0 auto;
+}
 
 
 /* about section style */
@@ -94,4 +98,11 @@ nav a{
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
