--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,12 +1,14 @@
 /* common shared style */
-body{
-    font-family: 'Lato',sans-serif ;
+body {
+    font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
-.text-primary{
+
+.text-primary {
     color: purple;
 }
-.btn-primary{
+
+.btn-primary {
     border-radius: 5px;
     background: purple;
     border: 0;
@@ -15,69 +17,81 @@ body{
     color: white;
     padding: 15px 35px;
 }
-.section-title{
+
+.section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
 
 }
-.section-description{
+
+.section-description {
     color: #757575;
     text-align: center;
     font-size: 18px;
 }
+
 /* nav related styles */
-nav{
+nav {
     display: flex;
-     justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
-    margin: 0  200px;
+    margin: 0 200px;
 
 }
 
-.nav-title{
+.nav-title {
     color: black;
     font-size: 45px;
     font-weight: 800;
 }
-nav  > ul{
+
+nav>ul {
     display: flex;
     align-items: center;
 }
-nav li{
+
+nav li {
     list-style: none;
-    margin-right: 50px ;
+    margin-right: 50px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: #474747;
 }
+
 /* header related style */
-.header{
-    background-color:#FFF8F3 ;
+.header {
+    background-color: #FFF8F3;
     background-image: url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: bottom right;
 }
-.banner{
+
+.banner {
     padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.banner-content{
+
+.banner-content {
     max-width: 500px;
 }
-.banner  .profile-pic{
+
+.banner .profile-pic {
     width: 500px;
 }
-.banner-greeting{
+
+.banner-greeting {
     font-size: 45px;
     color: #474747;
     margin-bottom: 0;
 }
-.banner-title{
+
+.banner-title {
     font-size: 85px;
     font-weight: 700;
     margin-top: 5px;
@@ -86,27 +100,60 @@ nav a{
 }
 
 /* main section style */
-main{
+main {
     max-width: 1140;
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 
 /* about section style */
-.about{
+.about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0px;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 }
-#What-I-Do-description{
+
+/* skill related styles */
+
+#What-I-Do-description {
     padding: 30px 150px;
+
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 30px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    color: #757575
+}
+
+/* resume section style */
+.resume-colum-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 
 }
